
        * fast/css/getComputedStyle/computed-style-with-zoom-expected.txt: Added.
        * fast/css/getComputedStyle/computed-style-with-zoom.html: Added.
        * fast/css/getComputedStyle/script-tests/computed-style-with-zoom.js: Added.
        (testProperty):
        (testPropertyValue):

2010-09-15  Chris Fleizach  <cfleizach@apple.com>

        AX: when text is auto-truncated, accessibility bounds are wrong
        https://bugs.webkit.org/show_bug.cgi?id=45793

        Adding ellipsis-text.html to the skip list for GTK until the reason for its failure
        is determined.

        * platform/gtk/Skipped:

2010-09-15  Tony Chang  <tony@chromium.org>

        Unreviewed, remove test that is now passing in test_shell and DRT.

        * platform/chromium/test_expectations.txt:

2010-09-15  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Simon Fraser.

        AX: when text is auto-truncated, accessibility bounds are wrong
        https://bugs.webkit.org/show_bug.cgi?id=45793

        * accessibility/ellipsis-text-expected.txt: Added.
        * accessibility/ellipsis-text.html: Added.

2010-09-15  Ariya Hidayat  <ariya@sencha.com>

        [Qt] Improve the speed of blur shadow
        https://bugs.webkit.org/show_bug.cgi?id=44222

        Update pixel test result.

        * platform/qt/fast/box-shadow/basic-shadows-expected.checksum:
        * platform/qt/fast/box-shadow/basic-shadows-expected.png:

2010-09-15  Steve Block  <steveblock@google.com>

        Reviewed by Jeremy Orlow.

        fast/dom/DeviceOrientation/add-listener-from-callback flaky
        https://bugs.webkit.org/show_bug.cgi?id=45814

        When we call addEventListener(), an event is sent to all registered
        event listeners on that page. So in the existing test, both the calls
        to setMockDeviceOrientation() and addEventListener() will trigger events
        to fire asynchronously on both listeners (both will be registered by the