@@ -1,3 +1,15 @@
+2010-09-22  Chris Fleizach  <cfleizach@apple.com>
+
+        Reviewed by Darin Adler.
+
+        AX: aria-hidden change doesn't update the ax tree
+        https://bugs.webkit.org/show_bug.cgi?id=45836
+
+        Test: accessibility/aria-hidden-update.html
+
+        * dom/Element.cpp:
+        (WebCore::Element::updateAfterAttributeChanged):
+
 2010-09-22  Kinuko Yasuda  <kinuko@chromium.org>
 
         Reviewed by Dumitru Daniliuc.
